# auto-train-agents

.github/workflows/: sync-spaces.yml
client/: README.md  package-lock.json  package.json
client/src/: App.css  App.jsx  index.css
client/src/components/Chat/: Chat.jsx  Chat.module.css
client/src/components/Login/: Login.jsx  Login.module.css
client/src/context/: AuthContextProvider.jsx  useAuth.js
server/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
server/src/agent/: graph.py
