[project]
name = "agent"
version = "0.0.1"
description = "Starter template for making a new agent LangGraph."
authors = [
    { name = "William Fu-Hinthorn", email = "13333726+hinthornw@users.noreply.github.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.14.2",
    "blockbuster==1.5.26",
    "certifi==2026.6.17",
    "cffi==2.1.0",
    "charset-normalizer==3.4.9",
    "click==8.4.2",
    "cloudpickle==3.1.2",
    "croniter==6.2.4",
    "cryptography==49.0.0",
    "distro==1.9.0",
    "forbiddenfruit==0.1.4",
    "googleapis-common-protos==1.75.0",
    "grpcio==1.80.0",
    "grpcio-health-checking==1.80.0",
    "grpcio-tools==1.80.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.8.0",
    "httpx==0.28.1",
    "idna==3.18",
    "importlib-metadata==8.7.1",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "jsonschema-rs==0.44.1",
    "langchain-core==1.5.0",
    "langchain-protocol==0.0.18",
    "langgraph==1.2.9",
    "langgraph-api==0.11.1",
    "langgraph-checkpoint==4.1.1",
    "langgraph-cli==0.4.31",
    "langgraph-prebuilt==1.1.0",
    "langgraph-runtime-inmem==0.31.1",
    "langgraph-sdk==0.4.2",
    "langsmith==0.10.9",
    "opentelemetry-api==1.37.0",
    "opentelemetry-exporter-otlp-proto-common==1.37.0",
    "opentelemetry-exporter-otlp-proto-http==1.37.0",
    "opentelemetry-exporter-prometheus==0.58b0",
    "opentelemetry-proto==1.37.0",
    "opentelemetry-sdk==1.37.0",
    "opentelemetry-semantic-conventions==0.58b0",
    "orjson==3.11.9",
    "ormsgpack==1.12.2",
    "packaging==26.2",
    "pathspec==1.1.1",
    "prometheus-client==0.25.0",
    "protobuf==6.33.6",
    "pycparser==3.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pyjwt==2.13.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "requests==2.34.2",
    "requests-toolbelt==1.0.0",
    "setuptools==83.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sse-starlette==3.3.4",
    "starlette==1.3.1",
    "structlog==25.5.0",
    "tenacity==9.1.4",
    "truststore==0.10.4",
    "typing-extensions==4.16.0",
    "typing-inspection==0.4.2",
    "urllib3==2.7.0",
    "uuid-utils==0.17.0",
    "uvicorn==0.51.0",
    "uvloop==0.22.1",
    "watchfiles==1.2.0",
    "websockets==15.0.1",
    "xxhash==3.8.1",
    "zipp==4.1.0",
    "zstandard==0.25.0",
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.agent", "agent"]
[tool.setuptools.package-dir]
"langgraph.templates.agent" = "src/agent"
"agent" = "src/agent"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "anyio>=4.7.0",
    "langgraph-cli[inmem]>=0.4.14",
    "mypy>=1.13.0",
    "pytest>=9.0.3",
    "ruff>=0.8.2",
]
